--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
       <nav style="float: right;">
         <ul class="clearfix">
           <li>
-            <a href="#">关于</a>
+            <a href="./canvas-demo/index.html">关于</a>
           </li>
           <li>
             <a href="#">技能</a>
