--- a/carousel.html
+++ b/carousel.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>carousel-demo</title>
+    <title>simple-carousel-demo</title>
     <style>
         .images {
             /* display: flex; */
