--- a/carousel-slide/apple-like-slide/index.html
+++ b/carousel-slide/apple-like-slide/index.html
@@ -34,7 +34,7 @@
     </span>
   </div>
 
-  <script src="http://code.jquery.com/jquery-2.1.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
   <script src="./script.js"></script>
 </body>
 
