--- a/js-server/index.html
+++ b/js-server/index.html
@@ -16,11 +16,39 @@
     <button id="button">打钱</button>
 
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
     <script src="/main"></script>
     <script>
+        /*
+        1. 共同约定：callback
+        2. getAmount函数名随机生成
+        window.getAmount(result) {
+            amount.innerText = result;
+            console.log(result)
+        }
+        */
         button.addEventListener('click', () => {
+            //jquery写法
+            // $.ajax({
+            //     url: '/pay',
+            //     dataType: 'jsonp',
+            //     success: function (response) {
+            //         amount.innerText = response;
+            //         console.log(result)
+            //     },
+            //     error: function (error) {
+            //         alert(JSON.stringify(error))
+            //     }
+            // })
+
+            //原生写法
             let script = document.createElement('script');
-            script.src = '/pay';
+            let fnName = 'chao' + ('' + Math.random()).replace('0.', '');
+            window[fnName] = function (result) {
+                amount.innerText = result;
+                console.log(result)
+            }
+            script.src = '/pay?callback=' + fnName;
             document.body.appendChild(script);
             script.onload = function (e) {
                 e.currentTarget.remove();
