update 匿名立即执行函数 模块化js

--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
   <title>我的个人简历</title>
   <link rel="stylesheet" href="./style.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.0/css/swiper.min.css">
-
   <script src="https://at.alicdn.com/t/font_515481_smn188ipmq9kvs4i.js"></script>
 </head>
 
@@ -182,11 +181,6 @@
         <div class="bar-inner"></div>
       </div>
     </nav>
-    <style>
-      .swiper-slide>img {
-        width: 70%
-      }
-    </style>
     <div class="swiper-container">
       <div class="swiper-wrapper">
         <div class="swiper-slide">
@@ -213,123 +207,10 @@
 
   <script src="https://cdnjs.cloudflare.com/ajax/libs/Swiper/4.1.0/js/swiper.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
-  <script>
-
-    var swiper = new Swiper('.swiper-container', {
-      effect: 'flip',
-      grabCursor: true,
-      pagination: {
-        el: '.swiper-pagination',
-      },
-      navigation: {
-        nextEl: '.swiper-button-next',
-        prevEl: '.swiper-button-prev',
-      },
-    });
-
-
-    // portfolio1.onclick = function () {
-    //   portfolioBar.className = 'bar state-1'
-    // }
-    // portfolio2.onclick = function () {
-    //   portfolioBar.className = 'bar state-2'
-    // }
-    // portfolio3.onclick = function () {
-    //   portfolioBar.className = 'bar state-3'
-    // }
-    setTimeout(function () {
-      siteWelcome.classList.remove('active')
-    }, 500)
-
-    let specialTags = document.querySelectorAll('[data-x]')
-    for (let i = 0; i < specialTags.length; i++) {
-      specialTags[i].classList.add('offset')
-    }
-
-    findCloseEle()
-    window.onscroll = function (e) {
-      // console.log(window.scrollY);
-      window.scrollY > 0 ? topNavBar.classList.add('sticky') : topNavBar.classList.remove('sticky')
-
-      findCloseEle();
-    }
-
-
-    function findCloseEle() {
-      let specialTags = document.querySelectorAll('[data-x]')
-      let minIndex = 0;
-
-      for (let i = 1; i < specialTags.length; i++) {
-        if (
-          Math.abs(specialTags[i].offsetTop - window.scrollY)
-          <
-          Math.abs(specialTags[minIndex].offsetTop - window.scrollY)
-        ) {
-          minIndex = i
-        }
-      }
-
-      specialTags[minIndex].classList.remove('offset')
-      let id = specialTags[minIndex].id;
-      let a = document.querySelector(`a[href="#${id}"]`);
-      let li = a.parentElement;
-      let aSlibings = li.parentElement.children;
-      for (let i = 0; i < aSlibings.length; i++) {
-        aSlibings[i].classList.remove('highlight')
-      }
-      li.classList.add('highlight');
-    }
-    let liTags = document.querySelectorAll('nav.menu>ul>li');
-    for (let i = 0; i < liTags.length; i++) {
-      liTags[i].onmouseenter = function (e) {
-        e.currentTarget.classList.add('active');
-
-      }
-
-      liTags[i].onmouseleave = function (e) {
-        e.currentTarget.classList.remove('active');
-
-      }
-    }
-
-
-    // Setup the animation loop.
-    function animate(time) {
-      requestAnimationFrame(animate);
-      TWEEN.update(time);
-    }
-    requestAnimationFrame(animate);
-
-    let aTags = document.querySelectorAll('nav.menu>ul>li>a');
-    for (let i = 0; i < aTags.length; i++) {
-      aTags[i].onclick = function (e) {
-        e.preventDefault();
-        let href = e.currentTarget.getAttribute('href');
-        let ele = document.querySelector(href);
-
-        let top = ele.offsetTop;//目标元素距离顶部距离
-
-        let currentTop = window.scrollY; //
-        let targetTop = top - 70;
-        let distance = (targetTop - currentTop)
-
-        var coords = { y: currentTop };
-        let t = Math.abs(distance / 100 * 300);
-        t > 500 ? 500 : t;
-
-        var tween = new TWEEN.Tween(coords)
-          .to({ y: targetTop }, 1000)
-          .easing(TWEEN.Easing.Bounce.Out)
-          .onUpdate(function () { // Called after tween.js updates 'coords'.
-            window.scrollTo(0, coords.y)
-
-          })
-          .start(); // Start the tween immediately.
-
-      }
-    }
-
-  </script>
+  <script src="./js/mock-loading.js"></script>
+  <script src="./js/init-swiper.js"></script>
+  <script src="./js/setup-offset.js"></script>
+  <script src="./js/smoth-scroll.js"></script>
 </body>
 
 </html>
