update mvc todo

--- a/index.html
+++ b/index.html
@@ -211,6 +211,9 @@
   <script src="./js/init-swiper.js"></script>
   <script src="./js/setup-offset.js"></script>
   <script src="./js/smoth-scroll.js"></script>
+  <script src="./js/module-1.js"></script>
+  <script src="./js/module-2.js"></script>
+
 </body>
 
 </html>
