update mvc swiper

--- a/index.html
+++ b/index.html
@@ -181,27 +181,30 @@
         <div class="bar-inner"></div>
       </div>
     </nav>
-    <div class="swiper-container">
-      <div class="swiper-wrapper">
-        <div class="swiper-slide">
-          <img src="./img/works/nav-site.jpg" alt="">
-        </div>
-        <div class="swiper-slide">
-          <img src="./img/works/canvas.jpg" alt="">
+    <div id="mySlides">
+      <div class="swiper-container">
+        <div class="swiper-wrapper">
+          <div class="swiper-slide">
+            <img src="./img/works/nav-site.jpg" alt="">
+          </div>
+          <div class="swiper-slide">
+            <img src="./img/works/canvas.jpg" alt="">
 
+          </div>
+          <div class="swiper-slide">
+            <img src="./img/works/apple-style.jpg" alt="">
+          </div>
         </div>
-        <div class="swiper-slide">
-          <img src="./img/works/apple-style.jpg" alt="">
-        </div>
+        <!-- 如果需要分页器 -->
+        <div class="swiper-pagination"></div>
+
+        <!-- 如果需要导航按钮 -->
+        <div class="swiper-button-prev"></div>
+        <div class="swiper-button-next"></div>
+
       </div>
-      <!-- 如果需要分页器 -->
-      <div class="swiper-pagination"></div>
-
-      <!-- 如果需要导航按钮 -->
-      <div class="swiper-button-prev"></div>
-      <div class="swiper-button-next"></div>
-
     </div>
+
 
   </section>
 
