update mvc ,todo: controller

--- a/index.html
+++ b/index.html
@@ -223,6 +223,9 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/tween.js/17.2.0/Tween.min.js"></script>
   <!-- 存储服务 -->
   <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
+  <script src="./js/base/view.js"></script>
+  <script src="./js/base/model.js"></script>
+
   <script src="./js/mock-loading.js"></script>
   <script src="./js/init-swiper.js"></script>
   <script src="./js/setup-offset.js"></script>
