--- a/index.html
+++ b/index.html
@@ -225,6 +225,7 @@
   <script src="https://cdn.jsdelivr.net/npm/leancloud-storage@3.9.0/dist/av-min.js"></script>
   <script src="./js/base/view.js"></script>
   <script src="./js/base/model.js"></script>
+  <script src="./js/base/controller.js"></script>
 
   <script src="./js/mock-loading.js"></script>
   <script src="./js/init-swiper.js"></script>
