--- a/index.html
+++ b/index.html
@@ -234,6 +234,8 @@
   <script src="./js/post-message.js"></script>
   <script src="./js/module-1.js"></script>
   <script src="./js/module-2.js"></script>
+  <script src="./js/my-promise.js"></script>
+
 </body>
 
 </html>
