--- a/animate-resume/index.html
+++ b/animate-resume/index.html
@@ -17,6 +17,7 @@
     <pre id="code">
 
     </pre>
+    <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
     <script src="./js/vendors/prism.js"></script>
     <script src="./js/main.js"></script>
 </body>
