--- a/vue-mvc/index.html
+++ b/vue-mvc/index.html
@@ -11,8 +11,8 @@
 <body>
     <div id="app">
         <div>
-            书名：《javascript高级程序设计》 数量：
-            <span id="number">2</span>
+            书名：__name__ 数量：
+            <span id="number">__number__</span>
         </div>
         <div>
             <button id="addOne">加1</button>
@@ -23,37 +23,70 @@
     <script src="https://cdn.bootcss.com/axios/0.18.0/axios.js"></script>
     <script src="https://cdn.bootcss.com/jquery/3.3.1/jquery.js"></script>
     <script>   
-        //添加响应拦截器
-        axios.interceptors.response.use(function (response) {
-            //对响应数据做些事
-            console.log(response)
-            return response;
-        }, function (error) {
-            //请求错误时做些事
-            return Promise.reject(error);
-        });
+
+
+
         axios.get('/books/1').then(
-            (resp) => { console.log(resp) }
+            ({ data }) => {
+                console.log(data);
+                let originHtml = $('#app').html();
+                let newHtml = originHtml.replace('__name__', data.name).replace('__number__', data.number);
+                $('#app').html(newHtml);
+
+            },
+            (err) => { console.log(err) },
+
 
         )
         $('#app').on('click', '#addOne', () => {
             var oldNum = $('#number').text();
             var newNum = oldNum - 0 + 1;
-            $('#number').text(newNum)
+            axios.put('/books/1', { number: newNum }).then(
+                ({ data }) => {
+                    $('#number').text(data.number)
+                }
+            )
         })
 
         $('#app').on('click', '#minusOne', () => {
             var oldNum = $('#number').text();
             var newNum = oldNum - 0 - 1;
-            $('#number').text(newNum)
+            axios.put('/books/1', { number: newNum }).then(
+                ({ data }) => {
+                    $('#number').text(data.number)
+                }
+            )
         })
 
         $('#app').on('click', '#reset', () => {
-            $('#number').text(0)
+            axios.put('/books/1', { number: 0 }).then(
+                ({ data }) => {
+                    $('#number').text(data.number)
+                }
+            )
         })
 
 
 
+
+        mockRequest();
+        function mockRequest() {
+            //添加响应拦截器
+            axios.interceptors.response.use(function (response) {
+                //对响应数据做些事
+                let { config: { url, method, data } } = response;
+                if (url === '/books/1' && method === 'get') {
+                    return response;
+                } else if (url === '/books/1' && method === 'put') {
+                    response.data = Object.assign(response.data, JSON.parse(data));
+                    return response;
+                }
+                // return response;
+            }, function (error) {
+                //请求错误时做些事
+                return Promise.reject(error);
+            });
+        }
     </script>
 </body>
 
